--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
+    "del": "^0.1.3",
     "grunt": "~0.4.0",
-    "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-shell": "~0.3.1"
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-shell": "~0.3.1",
+    "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-cache": "^0.2.4",
+    "gulp-concat": "^2.4.1",
+    "gulp-imagemin": "^1.1.0",
+    "gulp-jshint": "^1.8.5",
+    "gulp-livereload": "^2.1.1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-notify": "^2.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.2.0",
+    "gulp-uglify": "^1.0.1"
   },
   "engines": {
     "node": ">=0.8.0"
